syntax = "proto3";

package airchainpay;

// Token information
message Token {
  string symbol = 1;
  string name = 2;
  uint32 decimals = 3;
  string address = 4;
  string chainId = 5;
  bool isNative = 6;
}

// Payment metadata
message PaymentMetadata {
  string merchant = 1;
  string location = 2;
  string maxAmount = 3;
  string minAmount = 4;
  uint64 expiry = 5;
  uint64 timestamp = 6;
  map<string, string> extra = 7;
}

// Transaction payload for offline transfer
message TransactionPayload {
  string to = 1;
  string amount = 2;
  string chainId = 3;
  Token token = 4;
  string paymentReference = 5;
  PaymentMetadata metadata = 6;
  uint64 timestamp = 7;
  string version = 8;
  string type = 9;
}

// Encrypted transaction payload
message EncryptedTransactionPayload {
  string sessionId = 1;
  bytes encryptedData = 2;
  string hmac = 3;
  string nonce = 4;
  uint64 timestamp = 5;
  string version = 6;
}

// BLE payment data
message BLEPaymentData {
  string type = 1;
  string to = 2;
  string amount = 3;
  string chainId = 4;
  string paymentReference = 5;
  uint64 timestamp = 6;
  Token token = 7;
  PaymentMetadata metadata = 8;
}

// QR payment request
message QRPaymentRequest {
  string type = 1;
  string to = 2;
  string amount = 3;
  string chainId = 4;
  Token token = 5;
  string paymentReference = 6;
  PaymentMetadata metadata = 7;
  uint64 timestamp = 8;
  string version = 9;
}

// Transaction result
message TransactionResult {
  string status = 1;
  string transport = 2;
  string transactionId = 3;
  string hash = 4;
  string error = 5;
  uint64 timestamp = 6;
  string deviceId = 7;
  string deviceName = 8;
  string sessionId = 9;
  string message = 10;
} 